--- a/make_common.example
+++ b/make_common.example
@@ -3,15 +3,13 @@ dir_guard = @mkdir -p $(@D)
 CUDA_HOME := /usr/local/cuda
 MKL_ROOT := /opt/intel/mkl
 
-FIND := gfind
+FIND := find
 CXX := g++
 NVCC := $(CUDA_HOME)/bin/nvcc
 NVCCFLAGS += --default-stream per-thread
 CXXFLAGS += -Wall -O2 -std=c++11
-LDFLAGS += -lm -L$(CUDA_HOME)/lib64 -lcudart -lcublas -lcurand -lcusparse -lmkl_rt -lcppformat -lwht
-CUDA_ARCH := -gencode arch=compute_20,code=sm_20 \
-		-gencode arch=compute_20,code=sm_21 \
-		-gencode arch=compute_30,code=sm_30 \
+LDFLAGS += -lm -L$(CUDA_HOME)/lib64 -lcudart -lcublas -lcurand -lcusparse -lmkl_rt -lfmt -lwht
+CUDA_ARCH :=    -gencode arch=compute_30,code=sm_30 \
 		-gencode arch=compute_35,code=sm_35 \
 		-gencode arch=compute_50,code=sm_50 \
 		-gencode arch=compute_50,code=compute_50
