--- a/examples/graph_classification/Makefile
+++ b/examples/graph_classification/Makefile
@@ -6,7 +6,7 @@ lib_dir := $(GNN_HOME)/build/lib
 gnn_lib := $(lib_dir)/libgnn.a
 
 include_dirs := $(CUDA_HOME)/include $(MKL_ROOT)/include $(GNN_HOME)/include include
-CXXFLAGS += $(addprefix -I,$(include_dirs))
+CXXFLAGS += $(addprefix -I,$(include_dirs)) -DUSE_GPU
    
 all: build/kernel_mean_field build/kernel_loopy_bp
 
