--- a/make_common.example
+++ b/make_common.example
@@ -1,7 +1,9 @@
 dir_guard = @mkdir -p $(@D)
 
 CUDA_HOME := /usr/local/cuda
-MKL_ROOT := /opt/intel/mkl
+INTEL_ROOT := /opt/intel
+MKL_ROOT = $(INTEL_ROOT)/mkl
+TBB_ROOT = $(INTEL_ROOT)/tbb
 USE_GPU = 1
 
 FIND := find
@@ -9,7 +11,7 @@ CXX := g++
 NVCC := $(CUDA_HOME)/bin/nvcc
 NVCCFLAGS += --default-stream per-thread
 CXXFLAGS += -Wall -O3 -std=c++11
-LDFLAGS += -lm -L$(CUDA_HOME)/lib64 -lcudart -lcublas -lcurand -lcusparse -lmkl_rt -lfmt
+LDFLAGS += -lm -L$(CUDA_HOME)/lib64 -lcudart -lcublas -lcurand -lcusparse -lmkl_rt -ltbb -lfmt
 CUDA_ARCH :=    -gencode arch=compute_30,code=sm_30 \
 		-gencode arch=compute_35,code=sm_35 \
 		-gencode arch=compute_50,code=sm_50 \
