--- a/make_common.example
+++ b/make_common.example
@@ -11,7 +11,7 @@ CXX := g++
 NVCC := $(CUDA_HOME)/bin/nvcc
 NVCCFLAGS += --default-stream per-thread
 CXXFLAGS += -Wall -O3 -std=c++11
-LDFLAGS += -lm -L$(CUDA_HOME)/lib64 -lcudart -lcublas -lcurand -lcusparse -lmkl_rt -ltbb -lfmt
+LDFLAGS += -lm -L$(CUDA_HOME)/lib64 -lcudart -lcublas -lcurand -lcusparse -lmkl_rt -ltbb
 CUDA_ARCH :=    -gencode arch=compute_30,code=sm_30 \
 		-gencode arch=compute_35,code=sm_35 \
 		-gencode arch=compute_50,code=sm_50 \
