--- a/make_common.example
+++ b/make_common.example
@@ -1,6 +1,5 @@
 dir_guard = @mkdir -p $(@D)
 
-CUDA_HOME := /usr/local/cuda
 INTEL_ROOT := /opt/intel
 MKL_ROOT = $(INTEL_ROOT)/mkl
 TBB_ROOT = $(INTEL_ROOT)/tbb
@@ -8,10 +7,15 @@ USE_GPU = 1
 
 FIND := find
 CXX := g++
-NVCC := $(CUDA_HOME)/bin/nvcc
-NVCCFLAGS += --default-stream per-thread
 CXXFLAGS += -Wall -O3 -std=c++11
-LDFLAGS += -lm -L$(CUDA_HOME)/lib64 -lcudart -lcublas -lcurand -lcusparse -lmkl_rt -ltbb
+LDFLAGS += -lm  -lmkl_rt -ltbb
+ifeq ($(USE_GPU), 1)
+    CUDA_HOME := /usr/local/cuda
+    NVCC := $(CUDA_HOME)/bin/nvcc
+    NVCCFLAGS += --default-stream per-thread
+    LDFLAGS += -L$(CUDA_HOME)/lib64 -lcudart -lcublas -lcurand -lcusparse
+endif
+
 CUDA_ARCH :=    -gencode arch=compute_30,code=sm_30 \
 		-gencode arch=compute_35,code=sm_35 \
 		-gencode arch=compute_50,code=sm_50 \
